Fix scrollbar display in sidebar

--- a/style/general_style.css
+++ b/style/general_style.css
@@ -198,6 +198,7 @@
     background-color: #FFD438;
     color: white;
     list-style: none;
+    overflow-x: hidden;
 }
 
 li {
